# safely

./: .gitignore  CMakeLists.txt
include/: safely.h
include/guard/: access.h  lock.h  safecall.h
include/locker/: atomic.h  locker.h
include/safely/: safely.h
include/safely/guard/: access.h  lock.h  safecall.h
include/safely/locker/: locker.h
src/: main.cpp
src/locker/: atomic.cpp
